Fix navbar covering project header

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
   margin-top: 140px;
 }
 
-/*------------------- Header section -------------------- */
+/*------------------- Navbar section -------------------- */
 navbar {
   display: flex;
   justify-content: space-around;
@@ -249,6 +249,7 @@ a.icon {
 
 .projects > h1 {
   text-shadow: 0 0 10px lightgray;
+  scroll-margin-top: 100px;
 }
 
 .projects h1 {
